adding api json files

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
 
 
+    <!-- FIRE BASE SCRIPT TAG -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
 
     <!-- Third Party Scripts -->
     <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
