--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="col-xs-8 col-xs-offset-2 main-container">
+
+  <div class="container col-xs-4 col-xs-offset-4" id="login-container">
+    <h3 class="text-center form-spacing">To Do App</h3>
+    <input type="email" name="" id="inputEmail" class="form-control form-spacing" placeholder="EMAIL" required autofocus />
+    <input type="password" id="inputPassword" class="form-control form-spacing" placeholder="PASSWORD" required />
+    <input type="text" name="" id="inputUsername" class="form-control form-spacing" placeholder="USERNAME" required />
+    <button class="btn btn-lg btn-success col-xs-6" id="loginButton">Login</button>
+    <button class="btn btn-lg btn-primary col-xs-6" id="registerButton">Register</button>
+  </div>
+
+
+  <div class="col-xs-8 col-xs-offset-2 main-container hide">
     <div class="col-xs-12 new-container hide">
       <div class="row form-spacing">
         <div class="col-xs-12 text-center">
@@ -71,6 +82,8 @@
     <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- Personal Scripts -->
     <script type="text/javascript" src="./javascripts/firebase.js"></script>
+    <script type="text/javascript" src="./javascripts/auth.js"></script>
+    <script type="text/javascript" src="./javascripts/userCrud.js"></script>
     <script type="text/javascript" src="./javascripts/crud.js"></script>
     <script type="text/javascript" src="./javascripts/dom.js"></script>
     <script type="text/javascript" src="./javascripts/main.js"></script>
